--- a/src/index.css
+++ b/src/index.css
@@ -80,3 +80,7 @@ input::-webkit-inner-spin-button {
 input[type='number'] {
   -moz-appearance: textfield;
 }
+.data-floating-ui-portal {
+  position: relative;
+  z-index: 99999;
+}
